@@ -10,8 +10,13 @@
  - Save serverlist before connecting (Joe Drew).
  - OpenBSD compile fixes.
  - (Encoding) Fallback outgoing text to "?" for unconvertable chars.
+   [674798].
  - Hide tab scrolling buttons when they're not needed.
  - Fixed --disable-xlib compiles.
+ - Fixed use of %h in dialog-tab buttons [688937].
+ - Fixed printing/logging timestamps that contain invalid utf8
+   [688548].
+ - 
  - 
  - 
 
